test/stg/error/dataDouble.stg
-- Duplicate type+data constructors (with Prelude)
data Mybool = True | False;
data Mybool = Zero | Else;